# phaseGPU

./: CMakeLists.txt  README.md  StructureFunction2D.cu  arrayFire_test  arrayFire_test.cpp  cuda_funcs.h  fftshift.cu  fftshift.h  fftshift_test.cu  getComplexAbs.cu  getComplexReal.cu  getSubHarmonic.cu  makeComplexPSD.cu  phase_screen.cu  phase_screen_test.cu  subtract2DMean.cu
